<resources>
    <string name="app_name">ToDo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="txt_already_have_account">Already have an account? <font color="#2196F3">Login</font></string>
    <string name="txt_sign_up">Create Account</string>
    <string name="txt_login">Login</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="add_task">+ Add Task</string>
    <string name="add_task2">Add Task</string>
    <string name="add_a_task">Add a Task</string>
    <string name="fill_the_details_to_add_a_task_into_your_todo_list">Fill the details to add a task into your todo list</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a new account</string>
</resources>