<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogue.AddTodoPopupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="+"
                android:fontFamily="@font/sf_pro_display_medium"
                android:textAlignment="center"
                android:textColor="@color/stone"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:fontFamily="@font/sf_pro_display_light"
                android:text="@string/add_a_task"
                android:textAlignment="center"
                android:textSize="18sp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:fontFamily="@font/sf_pro_display_light"
                android:text="@string/fill_the_details_to_add_a_task_into_your_todo_list"
                android:textAlignment="center"
                android:textSize="16sp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTask"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type Task "
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select Date"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/imgDate"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select Time"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconTint="@color/black"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/imgTime"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/time_24"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
        <Button
            android:id="@+id/btnAddTask"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/add_task2"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:backgroundTint="@color/stone"
            android:layout_below="@id/txtConfirmPass"/>

    </LinearLayout>


</ScrollView>